<resources>
    <string name="app_name">ARTry</string>
    <string name="text_hello">Selamat Datang di Garasi Mobil Ir. Soekarno</string>
    <string name="text_top_menu">Garasi Mobil Kepresidenan Ir. Soekarno</string>
    <string name="text_hello_detail">Aplikasi ini menampilkan koleksi mobil kepresidenan Ir. Soekarno yang merupakan bagian dari Museum Joang45 Jakarta.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue purus congue lorem laoreet tristique sed at nulla. Fusce lacinia turpis eu sagittis varius. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur at congue augue. Ut ultrices gravida pulvinar. Aliquam vel eleifend ex. Curabitur elementum ante consequat, fringilla turpis sed, lobortis urna. Nunc porta augue in magna imperdiet, vel sagittis nibh commodo. Mauris imperdiet enim ex, a varius lectus aliquet sit amet. Maecenas est felis, condimentum cursus elementum vel, ultricies id leo. Praesent ipsum leo, mattis ut dolor vitae, hendrerit facilisis nisl. Pellentesque pulvinar egestas elementum. Ut sed auctor velit, at tristique lectus. Nulla facilisi. Integer feugiat vulputate mauris sed ultricies.</string>
    <string name="buick8_detail">Buick 8 merupakan mobil pertama yang dimiliki oleh pemerintah Indonesia dan digunakan oleh Ir. Soekarno selama masa jabatannya sebagai presiden dari tahun 1945-1949. Mobil yang memiliki label Rep 1 adalah mobil sedan hitam yang merupakan unit dari General Motors, namanya dipetik dari David Dunbar Buick sebagai pelopor otomotif Amerika Serikat. \n\nSejarah mobil Rep 1 ini awal mulanya dimiliki oleh Departemen Perhubungan Jepang dan dicuri oleh Sudiro sahabat Soekarno. Ia merayu sopir Departemen Perhubungan Jepang untuk memberikan kunci mobil tersebut. Lalu dibawanya ke rumah Soekarno dan digunakan Soekarno untuk melakukan tugasnya sebagai presiden.</string>
    <string name="desoto_detail">DeSoto Cabriolet yang memiliki label Rep 2 merupakan mobil dinas Mohammad Hatta sebagai wakil presiden. Brand DeSoto dibuat oleh Walter Chrysler pada 4 Agustus 1928 dan dipasarkan pada 1929. Nama DeSoto diambil dari seorang penjelajah ternama di Spanyol Hernando de Soto. Mobil ini populer pada kelas menengah di tahun 1928-1961, mulai surut di negara Amerika Serikat dan Kanada tahun 1960.\n\nMobil bewarna putih dibuat pada tahun 1938 merupakan hadiah dari seorang pengusaha di Jakarta paman Mohammad Hatta. Pamannya memberikan mobil tersebut karena merasa mobil itu cocok untuk dipakai oleh Mohammad Hatta keponakannya yang menjabat sebagai wakil presiden.</string>
    <string name="imperial_detail">Chrysler Imperial Crown merupakan mobil produksi tahun diproduksi dari tahun 1937-1939 rilis ketika Chrysler yang menjadi kompetitor Oldsmobile, Buick, Studebaker, Hudson, dan Willys dengan harga menengah namun ingin memiliki produk top-of-the-line. Merk-merk yang ingin menjadi sasaran adalah Cadillac, Continental, dan Lincoln.\n\nMobil ini adalah yang paling berkesan dan merupakan mobil kesayangan presiden pertama Indonesia. Mobil yang memiliki nomor polisi "B 9105" menjadi saksi bisu pada peristiwa usaha pembunuhan dari anggota Gerakan Anti Komunis Jakarta (GAK) kepada Ir. Soekarno, peristiwa ini dikenal sebagai "Peristiwa Cikini." Ketika Presiden menghadiri acara ulang tahun Perguruan Cikini yang merupakan sekolah dari putra-putri Ir. Soekarno. Saat ingin beranjak pulang, mobil Chrysler Imperial terdengar bunyi ledakan granat yang diketahui dilempar oleh anggota Gerakan Anti Komunis Jakarta (GAK). Mobil ini disimpan dengan masih terdapat cacat akibat ledakan untuk mengenang peristiwa tersebut.</string>
    <string name="text_institusi">Universitas Bina Nusantara @Malang</string>
    <string name="text_Lecture">Dosen MM 1\nDosen MM 2\nDosen UX 1\nDosen UX 2</string>
    <string name="text_kelompok">Hafizh Naufal\nNovelia Agatha Santoso\nM Fikri Imadudin</string>
    <string name="text_se">M Fikri Imadudin</string>
    <string name="text_3d">Hafizh Naufal</string>
    <string name="text_arsip">Novelia Agatha Santoso</string>
    <string name="text_tools">Blender\nFigma\nAndroid Studio\nAdobe Photoshop</string>
</resources>