<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".about.AboutActivity">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_back"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_tentang"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/text_tentang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Tentang Pengembang"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintLeft_toRightOf="@+id/ic_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>

    <TextView
        android:id="@+id/text_institusi_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Institusi"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_tentang" />

    <TextView
        android:id="@+id/text_institusi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_institusi"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tentang" />

    <TextView
        android:id="@+id/text_lecture_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Lecture"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_institusi" />

    <TextView
        android:id="@+id/text_lecture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_Lecture"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_institusi" />

    <TextView
        android:id="@+id/text_kelompok_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Kelompok"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_lecture" />

    <TextView
        android:id="@+id/text_kelompok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_kelompok"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_lecture" />

    <TextView
        android:id="@+id/text_se_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Software Engineer"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_kelompok" />

    <TextView
        android:id="@+id/text_se"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_se"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_kelompok" />

    <TextView
        android:id="@+id/text_3d_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="3D Designer"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_se" />

    <TextView
        android:id="@+id/text_3d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_3d"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_se" />

    <TextView
        android:id="@+id/text_ui_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="UI Designer"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_3d" />

    <TextView
        android:id="@+id/text_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_3d"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_3d" />

    <TextView
        android:id="@+id/text_arsip_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Arsip"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_ui" />

    <TextView
        android:id="@+id/text_arsip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_arsip"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ui" />

    <TextView
        android:id="@+id/text_tools_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Kelompok"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/text_arsip" />

    <TextView
        android:id="@+id/text_tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_tools"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_arsip" />


</androidx.constraintlayout.widget.ConstraintLayout>